# test_cargo

./: .gitignore  README.md  新建文本文档.txt
TDD/: poem.txt
TDD/src/: lib.rs  main.rs
TDD2/: Cargo.toml  output.txt  poem.txt
TDD2/src/: lib.rs  main.rs
TDD3/: Cargo.toml
TDD3/src/: lib.rs  main.rs
adder/src/: lib.rs
adder/tests/: integration.rs
adder/tests/common/: mod.rs
bingfa16/: Cargo.toml
bingfa16/src/: main.rs
closure12/: Cargo.toml
closure12/src/: main.rs
demo/src/: main.rs
fabu14/: Cargo.toml
fabu14/src/: lib.rs  main.rs
gaoji19/: Cargo.toml
gaoji19/src/: main.rs
gaojimacro19/: Cargo.toml  main.rs
gaojimacro19/hello_macro_derive/: Cargo.toml
gaojimacro19/hello_macro_derive/src/: lib.rs
gaojimacro19/pancakes/: Cargo.toml
gaojimacro19/pancakes/src/: main.rs
jihe/: Cargo.toml
jihe/src/: main.rs
kunhuang9/: Cargo.toml
kunhuang9/src/: main.rs
life11/: Cargo.toml
life11/src/: main.rs
minigrep/: poem.txt
minigrep/src/: lib.rs  main.rs
moshi18/: Cargo.toml
moshi18/src/: main.rs
multithread20/: Cargo.toml
multithread20/src/: lib.rs  main.rs
my_project/: Cargo.toml
my_project/src/: front_of_house.rs  lib.rs
oop17/: Cargo.toml
oop17/src/: lib.rs  lib2.rs  main.rs
pointer15/: Cargo.toml
pointer15/src/: main.rs
testc/: Cargo.toml
testc/src/: main.rs
trait10/: Cargo.toml
trait10/src/: main.rs
trait10_2/: Cargo.toml
trait10_2/src/: lib.rs  main.rs
variables/src/: main.rs
worksapce/: Cargo.toml
worksapce/adder/: Cargo.toml
worksapce/adder/src/: main.rs
